# component-ui

./: .gitignore  README.md  adder.wasm  calculator.wasm  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
assets/: bindgen.core-BCyHSiUD.wasm  clocks-CO9M1dfe.js  http-DxoFz0p7.js  index-BFEs28tb.js  index-BUKeXQBq.css  index-B_m6wy_b.css  index-CYSjXKnn.js  index-QglmVU4h.js  index-p-ESzUyz.js  index-sHe_jyvE.css  js-component-bindgen-component.core-DjGiHRyQ.wasm  sockets-DbnWBWvo.js
crates/bindgen/: Cargo.toml
crates/bindgen/src/: ast.rs  bindings.rs  lib.rs  main.rs  names.rs  source.rs
crates/bindgen/wit/: bindgen.wit
public/: kv_store.wasm  wasi-http.wasm
src/: example.ts  http.js  main.ts  style.css  ui-core.ts  ui.ts  wit.ts
